# internal/mods/class/api/class.api.go
@@ -7,27 +7,27 @@ import (
 	"github.com/xxx/testapp/pkg/util"
 )
 
-// 用户
-type Employ struct {
-	EmployBIZ *biz.Employ
+// 课件
+type Class struct {
+	ClassBIZ *biz.Class
 }
 
-// @Tags EmployAPI
+// @Tags ClassAPI
 // @Security ApiKeyAuth
-// @Summary Query employ list
-// @Success 200 {object} util.ResponseResult{data=[]schema.Employ}
+// @Summary Query class list
+// @Success 200 {object} util.ResponseResult{data=[]schema.Class}
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/class/employs [get]
-func (a *Employ) Query(c *gin.Context) {
+// @Router /api/v1/class/classes [get]
+func (a *Class) Query(c *gin.Context) {
 	ctx := c.Request.Context()
-	var params schema.EmployQueryParam
+	var params schema.ClassQueryParam
 	if err := util.ParseQuery(c, &params); err != nil {
 		util.ResError(c, err)
 		return
 	}
 
-	result, err := a.EmployBIZ.Query(ctx, params)
+	result, err := a.ClassBIZ.Query(ctx, params)
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -35,17 +35,17 @@ func (a *Employ) Query(c *gin.Context) {
 	util.ResPage(c, result.Data, result.PageResult)
 }
 
-// @Tags EmployAPI
+// @Tags ClassAPI
 // @Security ApiKeyAuth
-// @Summary Get employ record by ID
+// @Summary Get class record by ID
 // @Param id path string true "unique id"
-// @Success 200 {object} util.ResponseResult{data=schema.Employ}
+// @Success 200 {object} util.ResponseResult{data=schema.Class}
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/class/employs/{id} [get]
-func (a *Employ) Get(c *gin.Context) {
+// @Router /api/v1/class/classes/{id} [get]
+func (a *Class) Get(c *gin.Context) {
 	ctx := c.Request.Context()
-	item, err := a.EmployBIZ.Get(ctx, c.Param("id"))
+	item, err := a.ClassBIZ.Get(ctx, c.Param("id"))
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -53,18 +53,18 @@ func (a *Employ) Get(c *gin.Context) {
 	util.ResSuccess(c, item)
 }
 
-// @Tags EmployAPI
+// @Tags ClassAPI
 // @Security ApiKeyAuth
-// @Summary Create employ record
-// @Param body body schema.EmployForm true "Request body"
-// @Success 200 {object} util.ResponseResult{data=schema.Employ}
+// @Summary Create class record
+// @Param body body schema.ClassForm true "Request body"
+// @Success 200 {object} util.ResponseResult{data=schema.Class}
 // @Failure 400 {object} util.ResponseResult
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/class/employs [post]
-func (a *Employ) Create(c *gin.Context) {
+// @Router /api/v1/class/classes [post]
+func (a *Class) Create(c *gin.Context) {
 	ctx := c.Request.Context()
-	item := new(schema.EmployForm)
+	item := new(schema.ClassForm)
 	if err := util.ParseJSON(c, item); err != nil {
 		util.ResError(c, err)
 		return
@@ -73,7 +73,7 @@ func (a *Employ) Create(c *gin.Context) {
 		return
 	}
 
-	result, err := a.EmployBIZ.Create(ctx, item)
+	result, err := a.ClassBIZ.Create(ctx, item)
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -81,19 +81,19 @@ func (a *Employ) Create(c *gin.Context) {
 	util.ResSuccess(c, result)
 }
 
-// @Tags EmployAPI
+// @Tags ClassAPI
 // @Security ApiKeyAuth
-// @Summary Update employ record by ID
+// @Summary Update class record by ID
 // @Param id path string true "unique id"
-// @Param body body schema.EmployForm true "Request body"
+// @Param body body schema.ClassForm true "Request body"
 // @Success 200 {object} util.ResponseResult
 // @Failure 400 {object} util.ResponseResult
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/class/employs/{id} [put]
-func (a *Employ) Update(c *gin.Context) {
+// @Router /api/v1/class/classes/{id} [put]
+func (a *Class) Update(c *gin.Context) {
 	ctx := c.Request.Context()
-	item := new(schema.EmployForm)
+	item := new(schema.ClassForm)
 	if err := util.ParseJSON(c, item); err != nil {
 		util.ResError(c, err)
 		return
@@ -102,7 +102,7 @@ func (a *Employ) Update(c *gin.Context) {
 		return
 	}
 
-	err := a.EmployBIZ.Update(ctx, c.Param("id"), item)
+	err := a.ClassBIZ.Update(ctx, c.Param("id"), item)
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -110,17 +110,17 @@ func (a *Employ) Update(c *gin.Context) {
 	util.ResOK(c)
 }
 
-// @Tags EmployAPI
+// @Tags ClassAPI
 // @Security ApiKeyAuth
-// @Summary Delete employ record by ID
+// @Summary Delete class record by ID
 // @Param id path string true "unique id"
 // @Success 200 {object} util.ResponseResult
 // @Failure 401 {object} util.ResponseResult
 // @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/class/employs/{id} [delete]
-func (a *Employ) Delete(c *gin.Context) {
+// @Router /api/v1/class/classes/{id} [delete]
+func (a *Class) Delete(c *gin.Context) {
 	ctx := c.Request.Context()
-	err := a.EmployBIZ.Delete(ctx, c.Param("id"))
+	err := a.ClassBIZ.Delete(ctx, c.Param("id"))
 	if err != nil {
 		util.ResError(c, err)
 		return
@@ -128,15 +128,9 @@ func (a *Employ) Delete(c *gin.Context) {
 	util.ResOK(c)
 }
 
-// @Tags EmployAPI
-// @Security ApiKeyAuth
-// @Summary Delete employ record by ID
-// @Param id path string true "unique id"
-// @Success 200 {object} util.ResponseResult
-// @Failure 401 {object} util.ResponseResult
-// @Failure 500 {object} util.ResponseResult
-// @Router /api/v1/class/employs/{id} [delete]
-func (a *Employ) Preview(c *gin.Context) {
-	path := c.Param("path")
-	c.File(path)
+func (a *Class) Tree(c *gin.Context) {
+	ctx := c.Request.Context()
+	list := a.ClassBIZ.Tree(ctx)
+
+	util.ResSuccess(c, list)
 }
